# Design-Skill-Miner

./: .design-skill-miner.toml.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  Start Design Skill Miner.bat  Start Design Skill Miner.command  pyproject.toml  run-local.sh  setup.py  start-design-skill-miner.sh
docs/: ARCHITECTURE.md  HOW-TO-BUILD-THIS-AGENT.md  OPEN_SOURCE_CHECKLIST.md
src/design_skill_miner/: agent.py  apply_skill.py  attribution.py  cli.py  cluster.py  config.py  distill.py  draft_skill.py  filter.py  indexer.py  ingest.py  llm.py  memory.py  models.py  pipeline.py  publish_skill.py  report.py  review.py  run_jobs.py  skill_executor.py  skill_registry.py  skill_router.py  tool_policy.py  web.py  web_support.py
src/design_skill_miner/skills/: component-pattern-skill.json  content-rule-skill.json  page-pattern-skill.json
tests/: test_pipeline.py
tests/fixtures/sessions/2026/03/01/: sample.jsonl
web/: app.js  index.html  styles.css
