[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "design-skill-miner"
version = "0.3.0"
description = "从本地会话导出中提炼重复设计讨论，并生成可编辑的技能草稿。"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "fan" }
]
urls = { Homepage = "https://github.com/fan18660557495/Design-Skill-Miner", Repository = "https://github.com/fan18660557495/Design-Skill-Miner", Issues = "https://github.com/fan18660557495/Design-Skill-Miner/issues" }
keywords = ["design", "skills", "agent", "codex", "jsonl", "ux"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Environment :: Console",
  "Environment :: Web Environment"
]

[project.scripts]
design-skill-miner = "design_skill_miner.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
design_skill_miner = ["skills/*.json"]

[tool.setuptools.packages.find]
where = ["src"]
